@@ -207,27 +207,6 @@ data:extend({
   
   {
     type = "recipe",
-    name = "pm-aluminium-fiberoptic-cable",
-    icon_size = 64,
-    icon = "__periodic-madness__/graphics/icons/recipes/aluminium-fiberoptic-cable.png",
-    category = "crafting-with-fluid",
-    subgroup = "pm-wires",
-    order = "cb",
-    energy_required = 5,
-    enabled = false,
-    ingredients =
-    {
-      PM.ingredient("pm-pheonlic-resin", 10, "fluid"),
-      PM.ingredient("pm-glass-fibers", 20),
-      PM.ingredient("pm-aluminium-plate", 6)
-    },
-    results =
-    {
-      PM.product("pm-fiberoptic-cable", 3)
-    }
-  },
-  {
-    type = "recipe",
     name = "pm-sulfuric-acid-to-acidic-water",
     icon_size = 64,
     icon = "__periodic-madness__/graphics/icons/recipes/sulfuric-acid-to-acidic-water.png",
